[workspace]
members = [
    "shin-derive",
    "shin-core",
    "shin-render",
    "shin-video",
    "shin-tasks",
    "shin-audio",
    "shin-asm",
    "sdu",
    "shin",
    "junk",
]
resolver = "2"

[workspace.dependencies]
glam = "0.24.0"
# git version for GATs
enum-map = "3.0.0-0.gat.0"
#enum-map = { path = "/home/dcnick3/git_cloned/enum-map/enum-map" }
smallvec = { git = "https://github.com/servo/rust-smallvec.git", rev = "98b49e4d974c20f6d44a0804071074f267be0d88" }
wgpu = "0.17.0"
kira = { version = "0.8.5", default-features = false }
winit = "0.28.7"

# egui used for debug overlays
egui = "0.23.0"
egui-wgpu = "0.23.0"

image = { version = "0.24.5", default-features = false }
anyhow = "1.0.69"
bevy_utils = "0.11.2"
itertools = "0.11.0"
binrw = "0.12.0"

bytes = "1.5.0"

[profile.release]
debug = true
#lto = 'thin'

# optimize deps
[profile.dev.package."*"]
#opt-level = 2

[profile.release.package.wgpu-core]
# enable debug assertions to keep validations & debug labels
# they are still disabled in `dist` profile used to build the release
debug-assertions = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
debug = false
lto = "thin"

[workspace.metadata.release]
shared-version = true
publish = false # can't publish yet because of enum-map git dep
tag-prefix = ""

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
ci = ["github"]
installers = ["shell", "powershell"]
