[package]
name = "junk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
once_cell = "1.16.0"
binrw = "0.11.1"
derive_more = "0.99.17"
clap = { version = "4.0.32", features = ["derive"] }
image = { workspace = true }

[package.metadata.release]
release = false
publish = false
