[package]
name = "junk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
once_cell = "1.16.0"
binrw = { workspace = true }
derive_more = "0.99.17"
clap = { version = "4.0.32", features = ["derive"] }
image = { workspace = true }
bytes = { workspace = true }
itertools = { workspace = true }

walkdir = "2.5.0"

owo-colors = "3.5.0"

shin-core = { path = "../shin-core" }

[lints]
workspace = true

[package.metadata.release]
release = false
publish = false

[package.metadata.dist]
dist = false
