[package]
name = "sdu"
version = "0.5.0"
edition = "2021"
description = "Cli tool for working with shin-specific file formats"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shin-core = { path = "../shin-core" }
shin-asm = { path = "../shin-asm" }

anyhow = { workspace = true }
clap = { version = "4.0.15", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
image = { workspace = true, features = ["png"] }
bytes = "1.2.1"
itertools = { workspace = true }
clap_complete = "4.0.6"
counter = "0.5.7"
hound = "3.5.0"
ron = "0.8.0"
