[package]
name = "shin-asm"
version = "0.5.0"
edition = "2021"
description = "Assembler and disassembler library for the shin VM"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-derive = { path = "../shin-derive" }
shin-core = { path = "../shin-core" }

unicode-xid = "0.2.4"
unic-emoji-char = "0.9.0"

drop_bomb = "0.1.5"