[package]
name = "shin-audio"
version = "0.4.1"
edition = "2021"
description = "Kira audio sources for Shin Engine"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-core = { path = "../shin-core" }
shin-tasks = { path = "../shin-tasks" }

anyhow = { workspace = true }
tracing = "0.1.37"

kira = { workspace = true, features = ["cpal"] }
ringbuf = "0.3.1"

