[package]
name = "shin-core"
version = "0.5.0"
edition = "2021"
description = "Core library for the Shin engine: file formats support, virtual machine, etc"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shin-tasks = { path = "../shin-tasks" }

# derive macros
num-traits = "0.2.15"
num-derive = "0.4.0"
shin-derive = { path = "../shin-derive" }
derive_more = "0.99.17"
enum-map = { workspace = true }
async-trait = "0.1.58"
binrw = "0.11.1"
strum = { version = "0.25.0", features = ["derive"] }
proc-bitfield = "0.3.0"
derivative = "2.2.0"

anyhow = { workspace = true }
bitflags = "2.0.1"
bytemuck = { version = "1.12.1", features = ["derive"] }
bytes = "1.2.1"
glam = { workspace = true }
float-ord = "0.3.2"
image = { workspace = true, default-features = false }
itertools = { workspace = true }
smallvec = { workspace = true }
tracing = "0.1.37"
smartstring = "1.0.1"
once_cell = "1.16.0"
bitvec = "1.0.1"
# git version for unsafe-libopus backend
# we can ditch the bindings, but this would make moving back to them harder
opus = { git = "https://github.com/DCNick3/opus-rs.git", rev = "a3de7e71b35ab0a80be38c0d2420b18f0bd41411", default-features = false, features = ["unsafe-libopus-backend"] }
# git version for align method & attribute support
bitbuffer = { git = "https://github.com/icewind1991/bitbuffer.git", rev = "80a1c7cc2204023aa554e05f258c57e79e532fe8" }
serde = { version = "1.0.130", features = ["derive"] }
serde-big-array = "0.5.1"
num-integer = "0.1.45"
chrono = { version = "0.4.23", features = ["serde"] }

[dev-dependencies]
hex = "0.4.3"
insta = "1.26.0"
rand = "0.8.5"
