[package]
name = "shin-core"
version = "0.6.0"
edition = "2021"
description = "Core library for the Shin engine: file formats support, virtual machine, etc"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shin-primitives = { path = "../shin-primitives" }
shin-tasks = { path = "../shin-tasks" }

# derive macros
num-traits = "0.2.19"
num-derive = "0.4.2"
shin-derive = { path = "../shin-derive" }
derive_more = "0.99.18"
enum-map = { workspace = true }
async-trait = "0.1.58"
binrw = { workspace = true }
strum = { workspace = true, features = ["derive"] }
proc-bitfield = "0.4.0"
derivative = "2.2.0"
snafu = "0.8.4"

anyhow = { workspace = true }
bitflags = "2.0.1"
bytemuck = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
glam = { workspace = true }
float-ord = "0.3.2"
image = { workspace = true, default-features = false }
itertools = { workspace = true }
smallvec = { workspace = true }
tracing = "0.1.40"
smartstring = "1.0.1"
once_cell = "1.19.0"
bitvec = "1.0.1"
# git version for unsafe-libopus backend
# we can ditch the bindings, but this would make moving back to them harder
opus = { git = "https://github.com/DCNick3/opus-rs.git", rev = "a3de7e71b35ab0a80be38c0d2420b18f0bd41411", default-features = false, features = ["unsafe-libopus-backend"] }
# git version for align method & attribute support
bitbuffer = { git = "https://github.com/icewind1991/bitbuffer.git", rev = "80a1c7cc2204023aa554e05f258c57e79e532fe8" }
serde = { version = "1.0.204", features = ["derive"] }
serde-big-array = "0.5.1"
num-integer = "0.1.46"
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = "2.7.0"

[dev-dependencies]
hex = "0.4.3"
insta = "1.39.0"
similar-asserts = "1.6.0"
rand = "0.8.5"
lz4_flex = "0.11.3"
minicbor = { version = "0.25.1", features = ["derive", "std"] }

[lints]
workspace = true
