[package]
name = "shin-core"
version = "0.7.0"
edition = "2024"
description = "Core library for the Shin engine: file formats support, virtual machine, etc"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shin-primitives = { path = "../shin-primitives" }
shin-tasks = { path = "../shin-tasks" }

# derive macros
num-traits = "0.2.19"
num-derive = "0.4.2"
shin-derive = { path = "../shin-derive" }
derive_more = { version = "2.0.1", features = ["add", "add_assign"] }
enum-map = { workspace = true }
binrw = { workspace = true }
strum = { workspace = true, features = ["derive"] }
proc-bitfield = "0.5.2"
derivative = "2.2.0"
snafu = "0.8.4"

anyhow = { workspace = true }
bitflags = "2.0.1"
bytemuck = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
glam = { workspace = true }
float-ord = "0.3.2"
image = { workspace = true, default-features = false }
itertools = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
smartstring = "1.0.1"
once_cell = "1.19.0"
bitvec = "1.0.1"
# git version for unsafe-libopus backend
# we can ditch the bindings, but this would make moving back to them harder
opus = { git = "https://github.com/DCNick3/opus-rs.git", rev = "a3de7e71b35ab0a80be38c0d2420b18f0bd41411", default-features = false, features = ["unsafe-libopus-backend"] }
# git version for this PR https://github.com/icewind1991/bitbuffer/pull/11
# it fixes 2024 edition warnings
bitbuffer = { git = "https://github.com/DCNick3/bitbuffer.git", rev = "1c0541878467b25d1977f096dde59c1b90394669" }
serde = { version = "1.0.204", features = ["derive"] }
serde-big-array = "0.5.1"
num-integer = "0.1.46"
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = { workspace = true }

array-util = "1.0.2"

[dev-dependencies]
hex = "0.4.3"
insta = "1.39.0"
similar-asserts = "1.6.0"
rand = "0.9.0"
zstd = "0.13.2"
minicbor = { version = "0.26.0", features = ["derive", "std"] }

[lints]
workspace = true
