[package]
name = "shin-derive"
version = "0.5.0"
edition = "2021"
description = "Shin derive macros"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.1"
itertools = { workspace = true }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "2.0.18"
synstructure = "0.13.0"

[dev-dependencies]
prettyplease = "0.2.6"
