[package]
name = "shin-derive"
version = "0.7.1"
edition = "2024"
description = "Shin derive macros"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.10"
itertools = { workspace = true }
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.70"
synstructure = "0.13.1"

[dev-dependencies]
prettyplease = "0.2.20"

[lints]
workspace = true
