[package]
name = "shin-primitives"
version = "0.7.1"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
encase = { workspace = true, optional = true }

parking_lot = { workspace = true }

[features]
encase = ["dep:encase"]

[lints]
workspace = true
