[package]
name = "shin-render-shaders"
version = "0.7.0"
edition = "2024"

[dependencies]
shin-render-shader-types = { path = "../shin-render-shader-types" }

wgpu = { workspace = true }
bytemuck = { workspace = true }
enum-iterator = { workspace = true }

[build-dependencies]
shin-render-shader-types = { path = "../shin-render-shader-types" }

enum-iterator = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }

naga = { version = "24.0.0", features = ["wgsl-in", "wgsl-out", "spv-out"] }
spirv = "0.3.0"
# Be careful when updating! We rely on mangling implementation details
naga_oil = "0.17.0"

heck = "0.5.0"
proc-macro2 = "1.0.2"
quote = "1.0.37"
syn = "2.0.77"
prettyplease = "0.2.22"

itertools = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
