[package]
name = "shin-render"
version = "0.6.0"
edition = "2021"
description = "Common rendering utilities for the Shin engine"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

[dependencies]
shin-core = { path = "../shin-core" }
shin-derive = { path = "../shin-derive" }
shin-render-shader-types = { path = "../shin-render-shader-types" }
shin-render-shaders = { path = "../shin-render-shaders" }

anyhow = { workspace = true }
tracing = "0.1.40"

winit = { workspace = true }
wgpu = { workspace = true }
# Be careful when updating! We rely on mangling implementation details
naga_oil = "0.15.0"
naga = { version = "22.1.0", features = ["wgsl-out"] }

glam = { workspace = true, features = [
    # "scalar-math" disables the 16-byte alignment requirement for some types
    # this is required for bytemuck to work
    "bytemuck",
    #"scalar-math"
] }
bytemuck = { workspace = true, features = ["derive"] }
encase = { workspace = true, features = ["glam"] }

rustc-hash = "2.0.0"
bevy_utils = { workspace = true }
once_cell = "1.17.1"
image = { workspace = true, default-features = false }

slotmap = "1.0.7"

enum-iterator = { workspace = true }

[build-dependencies]
wgsl_bindgen = { path = "/home/dcnick3/git_cloned/wgsl-bindgen/wgsl_bindgen" }
miette = { version = "7.2.0", features = ["fancy", "syntect"] }

[dev-dependencies]
winit = { workspace = true }
pollster = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

