[package]
name = "shin-tasks"
version = "0.3.0"
edition = "2021"
description = "A task executor for Shin Engine (based on bevy)"
repository = "https://github.com/DCNick3/shin"
license = "MIT OR Apache-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.4.0"
async-executor = "1.3.0"
async-channel = "1.4.2"
async-task = "4.2.0"
once_cell = "1.7"
concurrent-queue = "2.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
