[package]
name = "shin-tasks"
version = "0.7.0"
edition = "2021"
description = "A task executor for Shin Engine (based on bevy)"
repository = "https://github.com/DCNick3/shin"
license = "MIT OR Apache-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "2.3.0"
async-executor = "1.12.0"
async-channel = "2.3.1"
async-task = "4.7.1"
once_cell = "1.19.0"
concurrent-queue = "2.5.0"
tracing = "0.1.40"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
pin-project = "1"
futures-channel = "0.3"

[dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }

[lints]
workspace = true
