[package]
name = "shin-video"
version = "0.3.0"
edition = "2021"
description = "Library integrating ffmpeg with the shin engine"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-render = { path = "../shin-render" }
shin-core = { path = "../shin-core" }
shin-tasks = { path = "../shin-tasks" }

# git version to support ilst box being before hdrl
# tracked at https://github.com/alfg/mp4-rust/pull/95
mp4 = { git = "https://github.com/DCNick3/mp4-rust.git", rev = "3a900c62db8f88e7376656bbbcbeb0a13797726b" }
symphonia = { version = "0.5.2", features = ["aac"], default-features = false }

wgpu = { workspace = true }
kira = { workspace = true }
glam = { workspace = true }

anyhow = "1.0.69"
bytes = "1.4.0"
tracing = "0.1.37"
which = "4.4.0"

async-process = "1.6.0"
futures-lite = "1.12.0"
num-integer = "0.1.45"

[dev-dependencies]
winit = "0.28.1"
wgpu = { workspace = true, features = [] }
kira = { workspace = true, features = ["cpal"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
pollster = "0.3.0"
image = { workspace = true, features = ["png"] }
