[package]
name = "shin-video"
version = "0.6.1"
edition = "2021"
description = "Library integrating ffmpeg with the shin engine"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-render = { path = "../shin-render" }
shin-core = { path = "../shin-core" }
shin-tasks = { path = "../shin-tasks" }
shin-audio = { path = "../shin-audio" }

mp4 = "0.14.0"
symphonia = { version = "0.5.4", features = ["aac"], default-features = false }

gst = { package = "gstreamer", version = "0.22.6", optional = true }
gst-app = { package = "gstreamer-app", version = "0.22.6", optional = true }
gst-video = { package = "gstreamer-video", version = "0.22.6", optional = true }

tracing-gstreamer = { version = "0.7.0", optional = true }

wgpu = { workspace = true }
kira = { workspace = true }
glam = { workspace = true }

anyhow = { workspace = true }
once_cell = "1.19.0"
cfg-if = "1.0.0"
bytes = { workspace = true }
tracing = "0.1.40"
which = "6.0.1"

async-process = "2.2.3"
futures-lite = "2.3.0"
num-integer = "0.1.45"

[features]
gstreamer = [
    "dep:gst",
    "dep:gst-app",
    "dep:gst-video",
    "dep:tracing-gstreamer",
]

[dev-dependencies]
winit = { workspace = true }
wgpu = { workspace = true, features = [] }
kira = { workspace = true, features = ["cpal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pollster = { workspace = true }
image = { workspace = true, features = ["png"] }
