[package]
name = "shin-video"
version = "0.7.0"
edition = "2021"
description = "Library integrating ffmpeg with the shin engine"
repository = "https://github.com/DCNick3/shin"
license = "MPL-2.0"
authors = ["DCNick3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shin-render = { path = "../shin-render" }
shin-core = { path = "../shin-core" }
shin-tasks = { path = "../shin-tasks" }
shin-audio = { path = "../shin-audio" }

mp4 = "0.14.0"
symphonia = { version = "0.5.4", features = ["aac"], default-features = false }

gst = { package = "gstreamer", version = "0.23", optional = true }
gst-app = { package = "gstreamer-app", version = "0.23", optional = true }
gst-video = { package = "gstreamer-video", version = "0.23", optional = true }

tracing-gstreamer = { version = "0.8.0", optional = true }

wgpu = { workspace = true }
kira = { workspace = true }
glam = { workspace = true }

anyhow = { workspace = true }
cfg-if = "1.0.0"
tracing = { workspace = true }
which = "7.0.2"

async-process = "2.2.3"
futures-lite = "2.3.0"
num-integer = "0.1.45"

dpi = { workspace = true }

parking_lot = { workspace = true }

once_cell = "1.20.3"

[features]
gstreamer = [
    "dep:gst",
    "dep:gst-app",
    "dep:gst-video",
    "dep:tracing-gstreamer",
]

[dev-dependencies]
shin-window = { path = "../shin-window" }
shin-input = { path = "../shin-input" }
shin-tasks = { path = "../shin-tasks" }

enum-map = { workspace = true }

wgpu = { workspace = true, features = [] }
kira = { workspace = true, features = ["cpal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true
