[package]
name = "shin-window"
version = "0.1.0"
edition = "2021"

[dependencies]
shin-primitives = { path = "../shin-primitives" }
shin-tasks = { path = "../shin-tasks" }
shin-input = { path = "../shin-input" }
shin-render = { path = "../shin-render" }

tracing = "0.1.40"

cfg-if = "1.0.0"

enum-map = { workspace = true }

winit = { workspace = true, features = ["android-native-activity"] }
wgpu = { workspace = true }

anyhow = { workspace = true }
derive-where = "1.2.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.70", features = ["Document"] }

[dev-dependencies]
dpi = { workspace = true }
glam = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
spin_sleep_util = "0.1.1"

[lints]
workspace = true
