[package]
name = "shin-window"
version = "0.7.0"
edition = "2024"

[dependencies]
shin-primitives = { path = "../shin-primitives" }
shin-tasks = { path = "../shin-tasks" }
shin-input = { path = "../shin-input" }
shin-render = { path = "../shin-render" }

tracing = { workspace = true }

cfg-if = "1.0.0"

enum-map = { workspace = true }

winit = { workspace = true, features = ["android-native-activity"] }
wgpu = { workspace = true }

anyhow = { workspace = true }
derive-where = "1.2.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.70", features = ["Document"] }

[dev-dependencies]
dpi = { workspace = true }
glam = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = { version = "0.2.1" }

[lints]
workspace = true
